# template

backend/: .env  Cargo.toml  sqlx-data.json
backend/migrations/: 20221209031246_create_users.up.sql
backend/src/: main.rs
backend/src/controller/: me.rs  mod.rs
backend/src/controller/lib/: jwt_extractor.rs  mod.rs
backend/src/lib/: auth.rs  config.rs  cors.rs  error.rs  mod.rs
backend/src/service/: me.rs
frontend/: .eslintrc.json  .firebaserc  .gitignore  firebase.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx  AppLink.tsx
frontend/src/hooks/: useAppToast.ts  useTextInput.ts
frontend/src/lib/: firebase.ts
frontend/src/lib/backend/: api.ts  axios.ts  type.ts
frontend/src/pages/: Home.tsx  Landing.tsx  Settings.tsx  SignIn.tsx  SignUp.tsx
frontend/src/providers/: app.tsx  auth.tsx  me.tsx
frontend/src/routes/: common.tsx  index.tsx  protected.tsx  public.tsx
