[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
derive-new = "0.5"
dotenv = "0.15"
env_logger = "0.9"
lazy_static = "1.4"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
  "runtime-actix-native-tls",
  "postgres",
  "chrono",
  "offline",
] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
